[package]
name = "silver-guacamole"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
crossbeam = "0.8.2"
ctrlc = "3.4.1"
tokio = { version = "1.27.0", features = ["full"] }
